https://jira.jboss.org/browse/JBIDE-6412 Add CDI Maven configurator
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@22779 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.seam/src/org/jboss/tools/maven/seam/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.seam/src/org/jboss/tools/maven/seam/messages.properties
@@ -7,6 +7,7 @@ SeamConfiguratorPreferencePage_Configure_JBoss_JSF_Portlet_facet=Configure JBoss
 SeamConfiguratorPreferencePage_Configure_JBoss_Portlet_Core_facet=Configure JBoss Portlet Core facet when importing Maven projects
 SeamConfiguratorPreferencePage_Configure_JBoss_Seam_Portlet_facet=Configure JBoss Seam Portlet facet when importing Maven projects
 SeamConfiguratorPreferencePage_Configure_JSF_facet=Configure JSF facet when importing Maven projects
+SeamConfiguratorPreferencePage_Configure_CDI_facet=Configure CDI facet when importing Maven projects
 SeamConfiguratorPreferencePage_Configure_Seam_Artifacts=Configure Seam Artifacts (view folder, model source folder, package ...)
 SeamConfiguratorPreferencePage_Configure_Seam_Runtime=Configure Seam Runtime
 SeamConfiguratorPreferencePage_Configure_Seam_when_importing_Maven_projects=Configure Seam when importing Maven projects
