https://jira.jboss.org/browse/JBIDE-6238 Project Examples should let users know if a project example site is unreachable
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@23137 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -31,16 +31,19 @@ NewProjectExamplesWizard_Importing=Importing...
 NewProjectExamplesWizard_New_Project_Example=New Project Example
 NewProjectExamplesWizard_OverwriteProject=Overwrite project ''{0}''
 NewProjectExamplesWizard_Question=Question
+NewProjectExamplesWizardPage_Cannot_access_the_following_sites=Cannot access the following sites:\n\n
 NewProjectExamplesWizardPage_Description=Description:
 NewProjectExamplesWizardPage_Details=Details...
 NewProjectExamplesWizardPage_Import_Project_Example=Import Project Example
 NewProjectExamplesWizardPage_Invalid_fix=Invalid fix in {0}. 
+NewProjectExamplesWizardPage_Invalid_Sites=Invalid Sites
 NewProjectExamplesWizardPage_Note=This example has some requirements that could not be automatically configured. When importing the example you might see some errors which would need fixing manually or via Quick Fixes. Click "Details" to see more.
 NewProjectExamplesWizardPage_Project_Example=Project Example
 NewProjectExamplesWizardPage_Project_name=Project name:
 NewProjectExamplesWizardPage_Project_size=Project size:
 NewProjectExamplesWizardPage_Projects=Projects:
 NewProjectExamplesWizardPage_Show_the_Quick_Fix_dialog=Show the Quick Fix dialog
+NewProjectExamplesWizardPage_Show_this_dialog_next_time=Show this dialog next time
 NewProjectExamplesWizardPage_URL=URL:
 PluginFix_Invalid_plugin_fix=Invalid plugin fix in {0}.
 Project_Unknown=Unknown
@@ -50,6 +53,7 @@ ProjectExamplesPreferencePage_Add=Add
 ProjectExamplesPreferencePage_Edit=Edit
 ProjectExamplesPreferencePage_Remove=Remove
 ProjectExamplesPreferencePage_Show_experimental_sites=Show experimental sites
+ProjectExamplesPreferencePage_Show_invalid_sites=Show invalid sites
 ProjectExamplesPreferencePage_Sites=Sites
 ProjectFix_Missing_Drools_Runtime=Missing Drools Runtime
 ProjectFix_Missing_plugin=Missing plugin
