--- a/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
@@ -22,3 +22,14 @@ MavenUserLibraryProviderInstallPanel_Restore_Defaults=Restore Defaults
 MavenUserLibraryProviderInstallPanel_Scope=Scope
 MavenUserLibraryProviderInstallPanel_Type=Type
 MavenUserLibraryProviderInstallPanel_Version=Version
+ConfiguratorPreferencePage_Configure_JBoss_JSF_Portlet_facet=JBoss JSF Portlet facet
+ConfiguratorPreferencePage_Configure_JBoss_Portlet_Core_facet=JBoss Portlet Core facet
+ConfiguratorPreferencePage_Configure_JBoss_Seam_Portlet_facet=JBoss Seam Portlet facet
+ConfiguratorPreferencePage_Configure_JSF_facet=JSF facet
+ConfiguratorPreferencePage_Configure_CDI_facet=CDI facet
+ConfiguratorPreferencePage_Configure_Hibernate=Hibernate
+ConfiguratorPreferencePage_Configure_Seam_Artifacts=Seam Artifacts (view folder, model source folder, package ...)
+ConfiguratorPreferencePage_Configure_Seam_Runtime=Seam Runtime
+ConfiguratorPreferencePage_Configure_Seam_when_importing_Maven_projects=Seam
+
+ConfiguratorPreferencePage_When_importing_Maven_projects_configure_the_following=When importing Maven projects configure the following:
