--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -64,6 +64,7 @@ ProjectUtil_Invalid_preferences=Invalid preferences.
 ProjectUtil_Invalid_property=Invalid property.
 ProjectUtil_Invalid_URL=Invalid URL\: {0}
 ProjectUtil_Invalid_welcome_element=The welcome element has invalid the url attribute
+ProjectUtil_Parsing_project_description_files=Parsing project description files...
 ProjectUtil_Test=Test
 NewProjectExamplesWizardPage_Site=Site\:
 SeamRuntimeFix_Invalid_seam_runtime_fix=Invalid Seam runtime fix in {0}.
