JBIDE-9921: Add quickfixes for missing dependencies based on M2E error markers. Quickfixes will open documentation pages on jboss.org
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36676 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
@@ -64,3 +64,6 @@ SelectProfilesDialog_Select_active_profiles_for_selected_projects=Select the act
 SelectProfilesDialog_Select_Maven_profiles=Select Maven profiles
 SelectProfilesDialog_Select_the_active_Maven_profiles=Select the active Maven profiles for project {0}. Right-click to (de)activate a profile.
 SelectProfilesDialog_SelectAll=Select All
+
+Quickfix_setupCommunityRepo=See how to setup JBoss repositories in your settings.xml
+Quickfix_setupEnterpriseRepo=See how to setup JBoss Enterprise repositories in your settings.xml
