--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -51,6 +51,7 @@ ProjectExamplesActivator_All=All
 ProjectExamplesActivator_Waiting=Waiting...
 ProjectExamplesPreferencePage_Add=Add
 ProjectExamplesPreferencePage_Edit=Edit
+ProjectExamplesPreferencePage_Output_directory=Output directory:
 ProjectExamplesPreferencePage_Remove=Remove
 ProjectExamplesPreferencePage_Show_experimental_sites=Show experimental sites
 ProjectExamplesPreferencePage_Show_invalid_sites=Show invalid sites
@@ -69,7 +70,7 @@ ProjectUtil_Test=Test
 NewProjectExamplesWizardPage_Site=Site\:
 SeamRuntimeFix_Invalid_seam_runtime_fix=Invalid Seam runtime fix in {0}.
 SiteDialog_Add_Project_Example_Site=Add Project Example Site
-SiteDialog_Browse=Browse...
+Browse=Browse...
 SiteDialog_Edit_Project_Example_Site=Edit Project Example Site
 SiteDialog_Invalid_URL=Invalid url.
 SiteDialog_Name=Name:
