JBIDE-10009 project examples should provide way to set the output direcotry
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36711 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -51,11 +51,12 @@ ProjectExamplesActivator_All=All
 ProjectExamplesActivator_Waiting=Waiting...
 ProjectExamplesPreferencePage_Add=Add
 ProjectExamplesPreferencePage_Edit=Edit
-ProjectExamplesPreferencePage_Output_directory=Output directory:
+ProjectExamplesPreferencePage_Output_directory=Output directory
 ProjectExamplesPreferencePage_Remove=Remove
 ProjectExamplesPreferencePage_Show_experimental_sites=Show experimental sites
 ProjectExamplesPreferencePage_Show_invalid_sites=Show invalid sites
 ProjectExamplesPreferencePage_Sites=Sites
+ProjectExamplesPreferencePage_Use_default_workspace_location=Use default workspace location
 ProjectFix_Missing_Drools_Runtime=Missing Drools Runtime
 ProjectFix_Missing_plugin=Missing plugin
 ProjectFix_Missing_Seam_Runtime=Missing Seam Runtime
