--- a/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
@@ -5,4 +5,4 @@ ArchetypeExamplesWizardFirstPage_ProjectName_Cant_Be_Empty=The project name can 
 ArchetypeExamplesWizardFirstPage_ProjectName_Label=Project name
 ArchetypeExamplesWizardFirstPage_Target_Runtime_Label=Target Runtime
 ArchetypeExamplesWizardFirstPage_Title=Create a new Java EE project
-ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo=Artifacts needed from JBoss Enterprise Maven repository do not seem to be available.\nThis might cause build problems. Follow this <a href=\"http://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories\">link</a> for more details.
+ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo={0} cannot be found.\n This indicates you do not have access to a JBoss Enterprise Maven repository.\n This can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
