JBIDE-10505 : added error message when setting a wrong package
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37424 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
@@ -6,3 +6,4 @@ ArchetypeExamplesWizardFirstPage_ProjectName_Label=Project name
 ArchetypeExamplesWizardFirstPage_Target_Runtime_Label=Target Runtime
 ArchetypeExamplesWizardFirstPage_Title=Create a new Java EE project
 ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo={0} cannot be found.\n This indicates you do not have access to a JBoss Enterprise Maven repository.\n This can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
+ArchetypeExamplesWizardFirstPage_Error_Package=Invalid package name
