JBIDE-10421 "output directory" is shown on the project example wizard before even choosing a project
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37591 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -39,6 +39,7 @@ NewProjectExamplesWizardPage_Invalid_fix=Invalid fix in {0}.
 NewProjectExamplesWizardPage_Invalid_Sites=Invalid Sites
 NewProjectExamplesWizardPage_Note=This example has some requirements that could not be automatically configured. When importing the example you might see some errors which would need fixing manually or via Quick Fixes. Click "Details" to see more.
 NewProjectExamplesWizardPage_Project_Example=Project Example
+NewProjectExamplesWizardPage_Project_Examples_Preferences=<a>Project Examples Preferences</a>
 NewProjectExamplesWizardPage_Project_name=Project name:
 NewProjectExamplesWizardPage_Project_size=Project size:
 NewProjectExamplesWizardPage_Projects=Projects:
