JBIDE-10750 : add new JPA maven configurator
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38456 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
@@ -23,6 +23,7 @@ MavenUserLibraryProviderInstallPanel_Scope=Scope
 MavenUserLibraryProviderInstallPanel_Type=Type
 MavenUserLibraryProviderInstallPanel_Version=Version
 ConfiguratorPreferencePage_Configure_JAX_RS_facet=JAX-RS facet
+ConfiguratorPreferencePage_Configure_JPA_facet=JPA facet
 ConfiguratorPreferencePage_Configure_JBoss_JSF_Portlet_facet=JBoss JSF Portlet facet
 ConfiguratorPreferencePage_Configure_JBoss_Portlet_Core_facet=JBoss Portlet Core facet
 ConfiguratorPreferencePage_Configure_JBoss_Seam_Portlet_facet=JBoss Seam Portlet facet
