JBIDE-10264 Wizard-ify the project examples
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38784 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -57,7 +57,7 @@ ProjectExamplesPreferencePage_Remove=Remove
 ProjectExamplesPreferencePage_Show_experimental_sites=Show experimental sites
 ProjectExamplesPreferencePage_Show_invalid_sites=Show invalid sites
 ProjectExamplesPreferencePage_Sites=Sites
-ProjectExamplesPreferencePage_Use_default_workspace_location=Use default workspace location
+ProjectExamplesPreferencePage_Use_default_workspace_location=Use default location
 ProjectFix_Missing_Drools_Runtime=Missing Drools Runtime
 ProjectFix_Missing_plugin=Missing plugin
 ProjectFix_Missing_Seam_Runtime=Missing Seam Runtime
