https://issues.jboss.org/browse/JBIDE-11244 Auto-discover all the modules and add them to the configuration on GWT project import patch to maven.ui to let enable/disable GWT Configurator plugin
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@39974 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.ui/src/org/jboss/tools/maven/ui/messages.properties
@@ -34,6 +34,8 @@ ConfiguratorPreferencePage_Configure_Hibernate=Hibernate
 ConfiguratorPreferencePage_Configure_Seam_Artifacts=Seam Artifacts (view folder, model source folder, package ...)
 ConfiguratorPreferencePage_Configure_Seam_Runtime=Seam Runtime
 ConfiguratorPreferencePage_Configure_Seam_when_importing_Maven_projects=Seam
+ConfiguratorPreferencePage_Configure_GWT=GWT Entry Point Modules
+
 
 ConfiguratorPreferencePage_When_importing_Maven_projects_configure_the_following=When importing Maven projects configure the following:
 
