JBIDE-11242: Users should be warned when WFK maven repo is missing https://issues.jboss.org/browse/JBIDE-11242
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@40150 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
@@ -1,9 +1,10 @@
-ArchetypeExamplesWizardFirstPage_Existing_Project=Project already exists
+ArchetypeExamplesWizardFirstPage_Existing_Project=Invalid project name: Project "{0}" already exists.
 ArchetypeExamplesWizardFirstPage_No_TargetRuntime=<none>
 ArchetypeExamplesWizardFirstPage_Package_Label=Package
 ArchetypeExamplesWizardFirstPage_ProjectName_Cant_Be_Empty=The project name can not be empty
 ArchetypeExamplesWizardFirstPage_ProjectName_Label=Project name
 ArchetypeExamplesWizardFirstPage_Target_Runtime_Label=Target Runtime
 ArchetypeExamplesWizardFirstPage_Title=Create a new Java EE project
-ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo={0} cannot be found.\n This indicates you do not have access to a JBoss Enterprise Maven repository.\n This can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
+ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo={0} cannot be found. This indicates you do not have access to a JBoss Enterprise Maven repository.\nThis can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
+ArchetypeExamplesWizardFirstPage_Unresolved_WFK_Repo=The enterprise version of this project has a dependency on {0} which cannot be found. This indicates you do not have access to a JBoss WFK Maven repository or that repository is incomplete.\nThis can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
 ArchetypeExamplesWizardFirstPage_Error_Package=Invalid package name
