JBIDE-10119: Filter project examples per compatible target runtime https://issues.jboss.org/browse/JBIDE-10119
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@40199 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -23,6 +23,7 @@ MarkerDialog_Quick_Fix=Quick Fix
 MarkerDialog_Resource=Resource
 MarkerDialog_Select_a_marker_and_click_the_Quick_Fix_button=Select a marker and click the Quick Fix button.
 MarkerDialog_Type=Type
+NewProjectExamplesMainPage_TargetedRuntime=Targeted runtime
 NewProjectExamplesWizard_Detail=Detail
 NewProjectExamplesWizard_Downloading=Downloading...
 NewProjectExamplesWizard_Error=Error
