--- a/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/src/org/jboss/tools/maven/project/examples/messages.properties
@@ -5,6 +5,6 @@ ArchetypeExamplesWizardFirstPage_ProjectName_Cant_Be_Empty=The project name can 
 ArchetypeExamplesWizardFirstPage_ProjectName_Label=Project name
 ArchetypeExamplesWizardFirstPage_Target_Runtime_Label=Target Runtime
 ArchetypeExamplesWizardFirstPage_Title=Create a new Java EE project
-ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo={0} cannot be found. This indicates you do not have access to a JBoss Enterprise Maven repository.\nThis can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
+ArchetypeExamplesWizardFirstPage_Unresolved_Enterprise_Repo=A *-redhat version of {0} cannot be found. This indicates you do not have access to a JBoss Enterprise Maven repository.\nThis can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
 ArchetypeExamplesWizardFirstPage_Unresolved_WFK_Repo=The enterprise version of this project has a dependency on {0} which cannot be found. This indicates you do not have access to a JBoss WFK Maven repository or that repository is incomplete.\nThis can cause build problems. Follow this <a href\="http\://community.jboss.org/wiki/SettingUpTheJBossEnterpriseRepositories">link</a> for more details.
 ArchetypeExamplesWizardFirstPage_Error_Package=Invalid package name
