JBIDE-11727 - explore providing an .project_example.xml file in root of quickstarts distributions for easy loading/detection in jboss tools
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41217 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -32,7 +32,7 @@ NewProjectExamplesWizard_Importing=Importing...
 NewProjectExamplesWizard_New_Project_Example=New Project Example
 NewProjectExamplesWizard_OverwriteProject=Overwrite project ''{0}''
 NewProjectExamplesWizard_Question=Question
-NewProjectExamplesWizardPage_Cannot_access_the_following_sites=Cannot access the following sites\:\n\n
+NewProjectExamplesWizardPage_Cannot_access_the_following_sites=Cannot read the following sites\:\n\n
 NewProjectExamplesWizardPage_Description=Description:
 NewProjectExamplesWizardPage_Details=Details...
 NewProjectExamplesWizardPage_Import_Project_Example=Import Project Example
@@ -56,6 +56,7 @@ ProjectExamplesPreferencePage_Edit=Edit
 ProjectExamplesPreferencePage_Output_directory=Output directory
 ProjectExamplesPreferencePage_Remove=Remove
 ProjectExamplesPreferencePage_Show_experimental_sites=Show experimental sites
+ProjectExamplesPreferencePage_Show_server_sites=Show server sites
 ProjectExamplesPreferencePage_Show_invalid_sites=Show invalid sites
 ProjectExamplesPreferencePage_Sites=Sites
 ProjectExamplesPreferencePage_Use_default_workspace_location=Use default location
@@ -83,5 +84,6 @@ SiteDialog_The_url_field_is_required=The url field is required.
 SiteDialog_URL=URL:
 Sites_Plugin_provided_sites=Plugin provided sites
 Sites_User_sites=User sites
+Sites_Server_sites=Server sites
 WTPRuntimeFix_Invalid_WTP_runtime_fix=Invalid WTP runtime fix in {0}.
 InvalideSite=Invalid site: {0},url={1}
