JBIDE-11727 - explore providing an .project_example.xml file in root of quickstarts distributions for easy loading/detection in jboss tools
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@41312 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/src/org/jboss/tools/project/examples/messages.properties
@@ -56,7 +56,7 @@ ProjectExamplesPreferencePage_Edit=Edit
 ProjectExamplesPreferencePage_Output_directory=Output directory
 ProjectExamplesPreferencePage_Remove=Remove
 ProjectExamplesPreferencePage_Show_experimental_sites=Show experimental sites
-ProjectExamplesPreferencePage_Show_server_sites=Show server sites
+ProjectExamplesPreferencePage_Show_runtime_sites=Show runtime sites
 ProjectExamplesPreferencePage_Show_invalid_sites=Show invalid sites
 ProjectExamplesPreferencePage_Sites=Sites
 ProjectExamplesPreferencePage_Use_default_workspace_location=Use default location
@@ -84,6 +84,6 @@ SiteDialog_The_url_field_is_required=The url field is required.
 SiteDialog_URL=URL:
 Sites_Plugin_provided_sites=Plugin provided sites
 Sites_User_sites=User sites
-Sites_Server_sites=Server sites
+Sites_Runtime_sites=Runtime sites
 WTPRuntimeFix_Invalid_WTP_runtime_fix=Invalid WTP runtime fix in {0}.
 InvalideSite=Invalid site: {0},url={1}
